# prao-compresser

./: CMakeLists.txt  Compresser.cpp  Compresser.h  FileHeader.cpp  FileHeader.h  Proektnaya_Dokumentatsia_Komandy_Proekt_v1.docx  README.md  Reader.cpp  Reader.h  config.json  main.cpp
Calibration/: CalibrationData.cpp  CalibrationData.h  CalibrationDataInput.cpp  CalibrationDataInput.h  CalibrationDataStorage.cpp  CalibrationDataStorage.h  test.cpp  test.h
Config/: Config.cpp  Config.h
Metrics/: MetricsContainer.cpp  MetricsContainer.h  MetricsType.cpp  MetricsType.h
Point/: Point.cpp  Point.h
Processing/: GPUContext.cpp  GPUContext.h  MetricsCalculator.cpp  MetricsCalculator.h  OpenCLContext.cpp  OpenCLContext.h  Processor.cpp  Processor.h  SignalProcessor.cpp  SignalProcessor.h  Sorter.cpp  Sorter.h
Processing/Kernels/: AnotherSortKernel.cl  MergeSortKernel.cl  MetricsKernel.cl  SortKernel.cl  bitonicSort.cl  heapSort.cl  nth_element.cl
Reader/: DataHeader.cpp  DataHeader.h  DataReader.cpp  DataReader.h  DateReader.cpp  DateReader.h  FilesListItem.cpp  FilesListItem.h  testReader.cpp  testReader.h
Time/: Time.cpp  Time.h
plot/: app.py  file_loader.py  requirements.txt
resources/: bigCalibrationParts.txt  combSort.cl  eq_1_6b_20140101_20141231.txt  filesListBig.txt  filesListSmall.txt  heapSort.cl  heapSort_CPU_edition.cl  jSort.cl  nth_element_CPU_edition.cl  qSort.cl  smallCalibrationParts1.txt
