cmake_minimum_required(VERSION 3.10)
project(prao-compresser)
set(CMAKE_CXX_STANDARD 14)
add_executable(prao-compresser main.cpp Reader.cpp Reader.h FileHeader.cpp FileHeader.h Calibration/CalibrationDataInput.h Calibration/CalibrationDataInput.cpp Calibration/CalibrationData.h Calibration/CalibrationData.cpp Calibration/CalibrationDataStorage.h Calibration/CalibrationDataStorage.cpp Calibration/test.cpp Calibration/test.h Reader/DataHeader.h Reader/DataHeader.cpp Reader/testReader.h Reader/testReader.cpp Reader/DataReader.h Reader/DataReader.cpp Point/Point.h Time/Time.h Time/Time.cpp Reader/FilesListItem.h Reader/FilesListItem.cpp)